Ability to delete content from tmp and permanent data.
Content length set for dynamoc content handler.